--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="wrapper">
         <div class="navbar">
           <a href="" class="logo">
-            <img src="assets/img/logo.png" alt="logo" />
+            <img src="logo.png" alt="logo" />
           </a>
           <ul class="list">
             <li><a href="">Home</a></li>
@@ -73,7 +73,7 @@
             <a href="">Dapatkan Sekarang</a>
           </div>
           <div class="hero-right">
-            <img src="assets/img/hero.png" alt="her9" />
+            <img src="hero.png" alt="her9" />
           </div>
         </div>
       </div>
@@ -81,6 +81,6 @@
     <!-- hero start -->
 
     <!--My Script Js -->
-    <script src="assets/js/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
